# aoc-2021-rust

./: Cargo.toml
src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  dayXX.rs  lib.rs  main.rs
src/util/: parse.rs
