[package]
name = "aoc_2021"
version = "0.1.0"
authors = ["Reimo Rebane <rebanerebane@gmail.com>"]
edition = "2021"

[dependencies]
aoc-runner = "^0.3.0"
aoc-runner-derive = "^0.3.0"
itertools = "0.10.2"
num = "0.4"
pest = "^2.1.3"
pest_derive = "^2.1.0"
phf = { version = "0.10", features = ["macros"] }
